--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,6 @@
 $primary-color: #2e86ab;
 
-@import "../../node_modules/spectre.css/src/spectre";
+@import "../node_modules/spectre.css/src/spectre";
 
 * {
   margin: 0;
